--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
   <html>
     <head>
-      <title>yeeyee</title>
+      <title>yeeyeo</title>
     </head>
     <body>
       <h1>yeeyee? yeeyee.</h1>
