--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
   <html>
     <head>
-      <title>yeeyeo</title>
+      <title>yeeyee</title>
     </head>
     <body>
-      <h1>yeeyee? yeeyee.</h1>
+      <h1>yeeyee? yeeyeo.</h1>
     </body>
   </html>
