--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE HTML>
   <html>
     <head>
+      <style>
+        body {
+          background-color: lightblue;
+        }
+
+        h1 {
+         color: white;
+         text-align: center;
+        }
+
+        p {
+          font-family: verdana;
+          font-size: 20px;
+        }
+      </style>
       <title>yeeyee</title>
     </head>
     <body>
-      <h1>yeeyee? yeeyeo.</h1>
+      <h1>yeeyee? yeeyee.</h1>
     </body>
   </html>
