--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
       <title>yeeyee</title>
     </head>
     <body>
-      <h1>yeeyee? yeeyee.</h1>
+      <h1>yeeyee?</h1>
     </body>
   </html>
