--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <style>
         body {
-          background-color: (255,24,83);
+          background-color: blue;
         }
 
         h1 {
