--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <style>
         body {
-          background-color: lightgreen;
+          background-color: lightblue;
         }
 
         h1 {
