--- a/index.html
+++ b/index.html
@@ -2,24 +2,141 @@
   <html>
     <head>
       <style>
-        body {
-          background-color: blue;
-        }
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500);
+body {
+  background: #A7FFEB;
+}
 
-        h1 {
-         color: white;
-         text-align: center;
-         font-family: verdana;
-        }
+h1 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 32px;
+  color: #212121;
+  padding: 100px 50px 50px 50px;
+  text-align: center;
+  line-height: 135%;
+}
 
-        p {
-          font-family: verdana;
-          font-size: 20px;
-        }
+.menu-button {
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  transition: 0.4s;
+  position: absolute;
+  right: 50px;
+  bottom: 50px;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  line-height: 60px;
+  border-radius: 50%;
+  background-color: #33cc33;
+  color: #FFFFFF;
+  font-size: 24px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.22);
+  cursor: pointer;
+}
+.menu-button:hover {
+  background: #33cc33;
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.28), 0 4px 15px 0 rgba(0, 0, 0, 0.25);
+}
+.menu-button a {
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  transition: 0.4s;
+  opacity: 0;
+  width: 0px;
+  height: 0px;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+  color: #FFFFFF;
+  font-size: 24px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.22);
+  cursor: pointer;
+}
+.menu-button a:hover {
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.28), 0 4px 15px 0 rgba(0, 0, 0, 0.25);
+}
+.menu-button a:nth-child(2) {
+  -webkit-transition-delay: 0.3s;
+  -moz-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+  position: absolute;
+  right: 30px;
+  bottom: 30px;
+  background: #55acee;
+}
+.menu-button a:nth-child(3) {
+  -webkit-transition-delay: 0.4s;
+  -moz-transition-delay: 0.4s;
+  transition-delay: 0.4s;
+  position: absolute;
+  right: 30px;
+  bottom: 30px;
+  background: #dc4e41;
+}
+.menu-button a:nth-child(4) {
+  -webkit-transition-delay: 0.5s;
+  -moz-transition-delay: 0.5s;
+  transition-delay: 0.5s;
+  position: absolute;
+  right: 30px;
+  bottom: 30px;
+  background: #3F3F3F;
+}
+.menu-button:hover a {
+  opacity: 1;
+  width: 50px;
+  height: 50px;
+}
+.menu-button:hover a:nth-child(2) {
+  right: 80px;
+  bottom: 0px;
+}
+.menu-button:hover a:nth-child(2):hover {
+  -webkit-transition-delay: 0s;
+  -moz-transition-delay: 0s;
+  transition-delay: 0s;
+  background: #3ea1ec;
+}
+.menu-button:hover a:nth-child(3) {
+  right: 65px;
+  bottom: 65px;
+}
+.menu-button:hover a:nth-child(3):hover {
+  -webkit-transition-delay: 0s;
+  -moz-transition-delay: 0s;
+  transition-delay: 0s;
+  background: #d83a2b;
+}
+.menu-button:hover a:nth-child(4) {
+  right: 0px;
+  bottom: 80px;
+}
+.menu-button:hover a:nth-child(4):hover {
+  -webkit-transition-delay: 0s;
+  -moz-transition-delay: 0s;
+  transition-delay: 0s;
+  background: #323232;
+}
+
+/*---FOR MOBILE VIEW---*/
+@media screen and (max-width: 400px) {
+  h1 {
+    padding: 15px;
+    font-size: 25px;
+  }
+}
       </style>
-      <title>yeeyee</title>
+      <title>henryandmaxtreetest</title>
     </head>
     <body>
-      <h1>yeeyee?</h1>
+      <h1>Henry and Max Tree Test</h1>
+        <img style="position:absolute; TOP:300px; LEFT:900px; WIDTH:600px; HEIGHT:500px" SRC="goodboy.jpg">
+      <div class="menu-button"><i class="zmdi zmdi-share"></i>
+        <a href="https://schoology.com"><i class="zmdi zmdi-twitter"></i></a>
+        <a href="https://google.com"><i class="zmdi zmdi-google-plus"></i></a>
+        <a href="https://bing.com"><i class="zmdi zmdi-codepen"></i></a>
+      </div>
     </body>
   </html>
